--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -7,6 +7,7 @@
 	flex-direction: column;
 	background:#fff;
 	margin-top:20px;
+	/*background: red;*/
 }
 .post1_name{
 	display: flex;
@@ -41,6 +42,9 @@
 }
 .post1_user_img_text > div:last-child{
 	font-size:10px;
+}
+.write_up{
+	margin-left:90px;
 }
 .write_up > div:first-child{
 	color:#1877f2;
@@ -298,20 +302,39 @@
 	height:100%;
 }
 
-
-@media only screen and (max-width: 600px){
-	.post1_img_1, .post2_img_1, .post3_img{
-		width:75%;
+@media only screen and (max-width:768px){
+	.post2_user_img img, .post1_user_img{
+		width:40px;
+		height:40px;
+		border-radius:100%;
+	}
+	.write_up{
+		margin-left:20px;
+	}
+	.post1_img_1, .post2_img_1, .post3_img, .reactions, .post1_img_2{
+		width:90%;
+		/*display: flex;*/
+		/*flex:1;*/
+		margin-left:20px;
+	}
+	.post1_user_img_text{
+		margin-top:10px;
 	}
 }
+
+@media only screen and (max-width: 600px){
+	/*.post1_img_1, .post2_img_1, .post3_img{
+		width:75%;
+	}*/
+}
 @media only screen and (max-width: 576px){
-	.post1_img_1, .post2_img_1, .post3_img{
+	/*.post1_img_1, .post2_img_1, .post3_img{
 		width:70%;
 	}
 
 	.post1_img_2, .reactions{
 		width:70%;
-	}
+	}*/
 }
 @media only screen and (max-width: 400px){
 	.post1_img_1, .post2_img_1, .post3_img{
